--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Калькулятор</title>
-    <link rel="stylesheet" href="calc.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <script type="text/javascript" src="js/script.js"></script>
     <meta charset="utf-8">
